refactor: remove unused contact, home, and menu components; update template structure

--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
         <button class="button" type="button">About</button>
       </nav>
     </header>
-    <div class="content" id="content">
+    <main class="content" id="content">
       <h2 class="intro-heading">
         <span>Welcome to The Flavor Haven</span>
         <span>Where Every Bite is an Experience</span>
@@ -25,6 +25,6 @@
         savoring every detail, from the first sip to the last bite. Enjoy a
         cozy, elegant atmosphere paired with dishes inspired by global cuisines.
       </p>
-    </div>
+    </main>
   </body>
 </html>
