refactor: restructure template layout and enhance hero section for improved presentation

--- a/src/template.html
+++ b/src/template.html
@@ -6,25 +6,29 @@
     <title>Restaurant Page</title>
   </head>
   <body>
-    <header class="header">
-      <h1 class="logo">The Flavor Haven</h1>
-      <nav class="navigation">
-        <button class="button" type="button">Home</button>
-        <button class="button" type="button">Menu</button>
-        <button class="button" type="button">About</button>
-      </nav>
-    </header>
-    <main class="content" id="content">
-      <h2 class="intro-heading">
-        <span>Welcome to The Flavor Haven</span>
-        <span>Where Every Bite is an Experience</span>
-      </h2>
-      <p class="intro-text">
-        Step into a world of flavors crafted with passion and precision. At The
-        Flavor Haven, we believe that dining is more than just eating—it's about
-        savoring every detail, from the first sip to the last bite. Enjoy a
-        cozy, elegant atmosphere paired with dishes inspired by global cuisines.
-      </p>
-    </main>
+    <div class="wrapper">
+      <header class="header">
+        <nav class="navigation">
+          <button class="button" type="button">Home</button>
+          <button class="button" type="button">Menu</button>
+          <button class="button" type="button">About</button>
+        </nav>
+      </header>
+      <main class="content" id="content">
+        <section class="hero-section">
+          <h2 class="heading">
+            <span>Welcome to The Flavor Haven</span><br />
+            <span>Where Every Bite is an Experience</span>
+          </h2>
+          <p class="text">
+            Step into a world of flavors crafted with passion and precision. At
+            The Flavor Haven, we believe that dining is more than just
+            eating—it's about savoring every detail, from the first sip to the
+            last bite. Enjoy a cozy, elegant atmosphere paired with dishes
+            inspired by global cuisines.
+          </p>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
