feat: update hero section styling and content structure for improved presentation

--- a/src/template.html
+++ b/src/template.html
@@ -15,9 +15,9 @@
         </nav>
       </header>
       <main class="content" id="content">
-        <section class="hero-section">
+        <!-- <section class="hero-section">
           <h2 class="heading">
-            <span>Welcome to The Flavor Haven</span><br />
+            <span>Welcome to The Flavor Haven</span>
             <span>Where Every Bite is an Experience</span>
           </h2>
           <p class="text">
@@ -27,7 +27,7 @@
             last bite. Enjoy a cozy, elegant atmosphere paired with dishes
             inspired by global cuisines.
           </p>
-        </section>
+        </section> -->
       </main>
     </div>
   </body>
