feat: refactor layout structure and enhance content handling for improved organization

--- a/src/template.html
+++ b/src/template.html
@@ -14,21 +14,7 @@
           <button class="button" type="button">About</button>
         </nav>
       </header>
-      <main class="content" id="content">
-        <!-- <section class="hero-section">
-          <h2 class="heading">
-            <span>Welcome to The Flavor Haven</span>
-            <span>Where Every Bite is an Experience</span>
-          </h2>
-          <p class="text">
-            Step into a world of flavors crafted with passion and precision. At
-            The Flavor Haven, we believe that dining is more than just
-            eating—it's about savoring every detail, from the first sip to the
-            last bite. Enjoy a cozy, elegant atmosphere paired with dishes
-            inspired by global cuisines.
-          </p>
-        </section> -->
-      </main>
+      <main class="content-container" id="contentContainer"></main>
     </div>
   </body>
 </html>
