feat: populate main content area with signature dishes and descriptions

--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,53 @@
           <button class="button" type="button">About</button>
         </nav>
       </header>
-      <main class="content-container" id="contentContainer"></main>
+      <main class="content-container" id="contentContainer">
+        <h1 class="heading">Our Signature Dishes</h1>
+        <section class="menu-container">
+          <div class="dish-card">
+            <h3 class="dish-title">Truffle Mushroom Risotto</h3>
+            <p class="dish-description">
+              Creamy arborio rice infused with white truffle oil, topped with
+              sautéed wild mushrooms and parmesan shavings.
+            </p>
+          </div>
+          <div class="dish-card">
+            <h3 class="dish-title">Truffle Mushroom Risotto</h3>
+            <p class="dish-description">
+              Creamy arborio rice infused with white truffle oil, topped with
+              sautéed wild mushrooms and parmesan shavings.
+            </p>
+          </div>
+          <div class="dish-card">
+            <h3 class="dish-title">Truffle Mushroom Risotto</h3>
+            <p class="dish-description">
+              Creamy arborio rice infused with white truffle oil, topped with
+              sautéed wild mushrooms and parmesan shavings.
+            </p>
+          </div>
+          <div class="dish-card">
+            <h3 class="dish-title">Truffle Mushroom Risotto</h3>
+            <p class="dish-description">
+              Creamy arborio rice infused with white truffle oil, topped with
+              sautéed wild mushrooms and parmesan shavings.
+            </p>
+          </div>
+          <div class="dish-card">
+            <h3 class="dish-title">Truffle Mushroom Risotto</h3>
+            <p class="dish-description">
+              Creamy arborio rice infused with white truffle oil, topped with
+              sautéed wild mushrooms and parmesan shavings.
+            </p>
+          </div>
+          <div class="dish-card">
+            <h3 class="dish-title">Truffle Mushroom Risotto</h3>
+            <p class="dish-description">
+              Creamy arborio rice infused with white truffle oil, topped with
+              sautéed wild mushrooms and parmesan shavings.
+            </p>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
