--- a/src/template.html
+++ b/src/template.html
@@ -25,38 +25,62 @@
             </p>
           </div>
           <div class="dish-card">
-            <h3 class="dish-title">Truffle Mushroom Risotto</h3>
+            <h3 class="dish-title">Charcoal-Grilled Salmon</h3>
             <p class="dish-description">
-              Creamy arborio rice infused with white truffle oil, topped with
-              sautéed wild mushrooms and parmesan shavings.
+              Fresh Atlantic salmon grilled to perfection, served with a tangy
+              lemon butter sauce and seasonal vegetables.
             </p>
           </div>
           <div class="dish-card">
-            <h3 class="dish-title">Truffle Mushroom Risotto</h3>
+            <h3 class="dish-title">Classic Margherita Pizza</h3>
             <p class="dish-description">
-              Creamy arborio rice infused with white truffle oil, topped with
-              sautéed wild mushrooms and parmesan shavings.
+              Hand-tossed dough with fresh mozzarella, vine-ripened tomatoes,
+              and a drizzle of extra virgin olive oil.
             </p>
           </div>
           <div class="dish-card">
-            <h3 class="dish-title">Truffle Mushroom Risotto</h3>
+            <h3 class="dish-title">Spicy Thai Basil Noodles</h3>
             <p class="dish-description">
-              Creamy arborio rice infused with white truffle oil, topped with
-              sautéed wild mushrooms and parmesan shavings.
+              Stir-fried rice noodles with fresh basil, chili, and a savory
+              house-made sauce—an explosion of Asian flavors.
             </p>
           </div>
           <div class="dish-card">
-            <h3 class="dish-title">Truffle Mushroom Risotto</h3>
+            <h3 class="dish-title">Chocolate Lava Cake</h3>
             <p class="dish-description">
-              Creamy arborio rice infused with white truffle oil, topped with
-              sautéed wild mushrooms and parmesan shavings.
+              A decadent molten chocolate dessert served with vanilla bean ice
+              cream.
             </p>
           </div>
           <div class="dish-card">
-            <h3 class="dish-title">Truffle Mushroom Risotto</h3>
+            <h3 class="dish-title">Garlic Butter Lobster Tail</h3>
             <p class="dish-description">
-              Creamy arborio rice infused with white truffle oil, topped with
-              sautéed wild mushrooms and parmesan shavings.
+              Succulent lobster tails brushed with rich garlic butter and
+              grilled to perfection, served with a side of lemon wedges.
+            </p>
+          </div>
+
+          <div class="dish-card">
+            <h3 class="dish-title">Mediterranean Grilled Lamb Chops</h3>
+            <p class="dish-description">
+              Tender lamb chops marinated in Mediterranean herbs, flame-grilled
+              and served with a side of roasted vegetables and mint yogurt
+              sauce.
+            </p>
+          </div>
+          <div class="dish-card">
+            <h3 class="dish-title">Creamy Pesto Pasta</h3>
+            <p class="dish-description">
+              Fresh linguine tossed in a velvety basil pesto sauce, finished
+              with sun-dried tomatoes and grated parmesan.
+            </p>
+          </div>
+
+          <div class="dish-card">
+            <h3 class="dish-title">Smoky BBQ Ribs</h3>
+            <p class="dish-description">
+              Slow-cooked pork ribs glazed with our signature smoky barbecue
+              sauce, served with crispy potato wedges and coleslaw.
             </p>
           </div>
         </section>
