feat: implement dynamic loading of menu items and update HTML structure

--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,7 @@
         </nav>
       </header>
       <main class="content-container" id="contentContainer">
-        <h1 class="heading">Our Signature Dishes</h1>
+        <!-- <h1 class="heading">Our Signature Dishes</h1>
         <section class="menu-container">
           <div class="dish-card">
             <h3 class="dish-title">Truffle Mushroom Risotto</h3>
@@ -59,7 +59,6 @@
               grilled to perfection, served with a side of lemon wedges.
             </p>
           </div>
-
           <div class="dish-card">
             <h3 class="dish-title">Mediterranean Grilled Lamb Chops</h3>
             <p class="dish-description">
@@ -75,7 +74,6 @@
               with sun-dried tomatoes and grated parmesan.
             </p>
           </div>
-
           <div class="dish-card">
             <h3 class="dish-title">Smoky BBQ Ribs</h3>
             <p class="dish-description">
@@ -83,7 +81,7 @@
               sauce, served with crispy potato wedges and coleslaw.
             </p>
           </div>
-        </section>
+        </section> -->
       </main>
     </div>
   </body>
