--- a/src/template.html
+++ b/src/template.html
@@ -9,12 +9,12 @@
     <div class="wrapper">
       <header class="header">
         <nav class="navigation">
-          <button class="button" type="button">Home</button>
-          <button class="button" type="button">Menu</button>
-          <button class="button" type="button">About</button>
+          <button class="button" id="homeButton" type="button">Home</button>
+          <button class="button" id="menuButton" type="button">Menu</button>
+          <button class="button" id="aboutButton" type="button">About</button>
         </nav>
       </header>
-      <main class="content-container" id="contentContainer"></main>
+      <main id="content"></main>
     </div>
   </body>
 </html>
